# gsapro

./: README.md  render.py  render_pointcloud_pgsr.py  train_depfilt_ncc.py  train_helix.py
arguments/: __init__.py  bkinit.py
depthfusion/: dtu_pmdataset_genmask.py  fuse.py  fuse_acmh.py  fuse_fromdepth.py  fuse_gen_mask.py
gaussian_renderer/: __init__.py
helix_model/: config_partsplit.py  helixncc.py
minor_scripts/: acmh2colmap.py  blended2colmap.py  checktime.py  cmd_generation.py  colmap2acmh.py  downsample_blendedmvs.py  downsample_pcd.py  evaluation_pcd.py  generate_depth_map.py  helix2split.py  hw2pgsrhelix.py  mm2025_dataset.py  mm2025_overview.py  mm2025_priorbranch_pic.py  pairs2pair.py  pgsr2megasurf.py  prepare_patchmatch_tnt_intermediate.py  rec_points.py  record2csv.py  record2csv_blended.py  record2csv_dtu.py  rep_win2unix.py  splitscene.py
models/: FMT.py  cas_model.py  dpt_trimnet.py  module.py  trimnet_for_helix_0328.py
nccmodule/: ACMH.cpp  ACMH.cu  ACMH.h  CMakeLists.txt  README.md  main.cpp  main.h  nccmodule.cpp  nccmodule.cu  nccmodule.h  nccmodule_test.py  pyCMakeLists.txt  setup.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py  helix_dataset.py
scripts/: clip_mesh.py  colmap2perfect.py  dtu_eval.py  mm2025_tsdf.py  mm2025_tsdf_fusion_depth.py  render_tnt.py  render_tnt_new.py  render_tnt_sets.py
scripts/fast-eval-dtu/: eval_dtu.py  eval_dtu_bk.py  eval_utils.py
scripts/preprocess/: colmap2mvsnet.py  convert_tnt.py
scripts/tnt_eval/: registration.py
ysutils/: __init__.py  requirements.txt  util_acmh.py  util_colmap.py  util_contextcapture.py  util_image.py  util_megasurf.py  util_metashape.py  util_multiprocessl.py  util_mvsnet.py  util_ncc.py  util_neuralangelo.py  util_open3d.py
